--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   provider: ^5.0.0
   cloud_firestore: ^2.4.0
   flutter_local_notifications: ^6.1.0
+  cloud_functions: ^3.0.0
+  http: ^0.13.3
+  flutter_slidable: ^0.6.0
 
 dev_dependencies:
   flutter_test:
