--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cloud_functions: ^3.0.0
   http: ^0.13.3
   flutter_slidable: ^0.6.0
+  google_fonts: ^2.1.0
+  liquid_progress_indicator: ^0.4.0
+  modal_bottom_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
