Improve username registration flow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^2.1.0
   liquid_progress_indicator: ^0.4.0
   modal_bottom_sheet: ^2.0.0
+  mask_text_input_formatter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
