--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
   mask_text_input_formatter: ^2.0.0
   flutter_svg: ^0.22.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
