--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.0.2+3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -43,11 +43,12 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
   mask_text_input_formatter: ^2.0.0
   flutter_svg: ^0.22.0
-  flutter_launcher_icons: ^0.9.2
+  package_info_plus: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -90,3 +91,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/whale.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/whale.png"
