--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   mask_text_input_formatter: ^2.0.0
   flutter_svg: ^0.22.0
   package_info_plus: ^1.0.6
+  url_launcher: ^6.0.10
 
 dev_dependencies:
   flutter_test:
