--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   url_launcher: ^6.0.10
   google_mobile_ads: ^0.13.4
   intl: ^0.17.0
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
