--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.2.0+8
+version: 0.4.1-beta+11
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -47,6 +47,9 @@ dependencies:
   google_mobile_ads: ^0.13.4
   intl: ^0.17.0
   shared_preferences: ^2.0.7
+  in_app_purchase: ^1.0.8
+  uni_links: ^0.5.1
+  introduction_screen: ^2.1.0
 
 dev_dependencies:
   flutter_test:
