--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.4.2+13
+version: 0.5.1+15
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -50,6 +50,7 @@ dependencies:
   in_app_purchase: ^1.0.8
   uni_links: ^0.5.1
   introduction_screen: ^2.1.0
+  liquid_progress_indicator: ^0.4.0
 
 dev_dependencies:
   flutter_test:
